--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "api-mount-client",
-  "version": "0.0.0",
+  "version": "1.0.2",
   "description": "Library for making communication between front-end and back-end simple",
   "main": "dist/node.js",
-  "browser": "./dist/browser.js",
-  "scripts": {},
+  "browser": "./dist/index.js",
+  "scripts": {
+    "prepublishOnly": "npm run lint && npm run build && npm run test && npm run docs",
+    "test": "./node_modules/.bin/jest --forceExit --detectOpenHandles",
+    "testSync": "./node_modules/.bin/jest --runInBand --forceExit --detectOpenHandles",
+    "lint": "./node_modules/.bin/tslint -c ./tslint.json -p ./tsconfig.json -t stylish ./lib/**/*.ts",
+    "build": "./node_modules/.bin/webpack && npm run buildBrowser",
+    "buildBrowser": "./node_modules/.bin/webpack --config webpack.config.browser.js",
+    "buildDev": "./node_modules/.bin/webpack --config webpack.config.dev.js && npm run buildDevBrowser",
+    "buildDevBrowser": "./node_modules/.bin/webpack --config webpack.config.dev.browser.js",
+    "docs": "./node_modules/.bin/typedoc --module commonjs --target ES6 --exclude **/*.test.* --ignoreCompilerErrors --out ./docs --readme ./README.md --mode file ./index.ts ./lib"
+  },
   "homepage": "https://github.com/vytenisu/api-mount-client",
   "bugs": {
     "url": "https://github.com/vytenisu/api-mount-client/issues"
@@ -44,5 +54,25 @@
     "name": "Vytenis Urbonavičius",
     "url": "https://github.com/vytenisu"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "api-link": "^1.0.5"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.0",
+    "api-mount-server": "^1.0.2",
+    "jest": "^26.0.1",
+    "license-webpack-plugin": "^2.2.0",
+    "node-fetch": "^2.6.0",
+    "npm-dts-webpack-plugin": "^1.3.0",
+    "ts-jest": "^26.1.0",
+    "ts-loader": "^7.0.5",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.2",
+    "typedoc": "^0.17.7",
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-node-externals": "^1.7.2"
+  }
 }
