--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-mount-client",
-  "version": "1.0.2",
+  "version": "1.0.6",
   "description": "Library for making communication between front-end and back-end simple",
   "main": "dist/node.js",
   "browser": "./dist/index.js",
@@ -56,7 +56,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "api-link": "^1.0.5"
+    "api-link": "^1.0.6"
   },
   "devDependencies": {
     "@types/jest": "^26.0.0",
@@ -72,7 +72,6 @@
     "typedoc": "^0.17.7",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-cli": "^3.3.11"
   }
 }
